[gd_scene load_steps=4 format=3 uid="uid://cee50qhn61vky"]

[ext_resource type="Texture2D" uid="uid://ch6v4vkk16jp3" path="res://src/assets/sprites/placeholder_npc.png" id="1_dpysd"]
[ext_resource type="Script" path="res://src/entities/props/interactable_props/dialogue_interactable/dialogue_interactable_prop.gd" id="1_wxerh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_moxm3"]

[node name="DialogueInteractable" type="Area3D"]
script = ExtResource("1_wxerh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_moxm3")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(3.51358, 0, 0, 0, 3.51358, 0, 0, 0, 3.51358, 0, 0, 0)
texture = ExtResource("1_dpysd")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
